fix for IllegalArgumentException thrown when calling newMultiMappedOutboundSignal
 - added a separate check for the mapped mappedSignals variable since filterFailedEnrichments() may return an empty list

Signed-off-by: Kalin Kostashki <kalin.kostashki@bosch.io>